# tzjingtai-erpnext

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml
apps/acceptance/: CLAUDE.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
apps/acceptance/acceptance/: hooks.py  modules.txt
apps/acceptance/acceptance/acceptance/: accounting_defaults.py  dashboard_stats.py  ocr_service.py
apps/acceptance/acceptance/acceptance/api/: import_helpers.py
apps/acceptance/acceptance/acceptance/dashboard_chart/bill_maturity_distribution/: bill_maturity_distribution.json
apps/acceptance/acceptance/acceptance/dashboard_chart_source/bill_maturity_distribution/: bill_maturity_distribution.json  bill_maturity_distribution.py
apps/acceptance/acceptance/acceptance/doctype/bill_discount/: bill_discount.js  bill_discount.json  bill_discount.py
apps/acceptance/acceptance/acceptance/doctype/bill_of_exchange/: bill_of_exchange.js  bill_of_exchange.json  bill_of_exchange.py
apps/acceptance/acceptance/api/: __init__.py  accounting.py  import_helpers.py  ocr.py
apps/acceptance/acceptance/config/: desktop.py
apps/acceptance/acceptance/desktop_icon/: 承兑汇票.json
apps/acceptance/acceptance/locale/: zh.po
apps/acceptance/acceptance/public/js/: acceptance_holdings.js  bill_discount.js  bill_receipt.js  bill_settlement.js  bill_transfer.js  purchase_invoice.js  sales_invoice.js
apps/acceptance/acceptance/utils/: segments.py
apps/acceptance/acceptance/workspace_sidebar/: acceptance.json
apps/hourly_payroll/: MANIFEST.in  README.md  license.txt  pyproject.toml
apps/hourly_payroll/hourly_payroll/: hooks.py  modules.txt
apps/hourly_payroll/hourly_payroll/fixtures/: custom_field.json
apps/hourly_payroll/hourly_payroll/locale/: zh.po
apps/hourly_payroll/hourly_payroll/public/js/: attlog_import.js  hourly_payroll_settings.js  monthly_payroll_run.js  payroll_adjustment.js
apps/hourly_payroll/hourly_payroll/utils/: attlog_parser.py  wage_calc.py  work_hours.py
apps/item_drawings/: MANIFEST.in  README.md  license.txt  pyproject.toml
apps/item_drawings/item_drawings/: api.py  hooks.py  modules.txt
apps/item_drawings/item_drawings/fixtures/: custom_field.json
apps/item_drawings/item_drawings/public/js/: item_drawing_form.js  item_drawings_lightbox.js
apps/tzjingtai/: MANIFEST.in  README.md  pyproject.toml
apps/tzjingtai/tzjingtai/: hooks.py  item_code.py  modules.txt
apps/tzjingtai/tzjingtai/fixtures/: custom_field.json  property_setter.json
apps/tzjingtai/tzjingtai/locale/: zh.po
apps/tzjingtai/tzjingtai/public/js/: item_drawings_link.js  item_form.js  link_formatters.js  order_remark.js
apps/tzjingtai_core/: README.md  pyproject.toml
apps/tzjingtai_core/tzjingtai_core/: hooks.py  modules.txt
apps/tzjingtai_core/tzjingtai_core/locale/: zh.po
apps/tzjingtai_core/tzjingtai_core/overrides/: item.py
apps/tzjingtai_core/tzjingtai_core/public/js/: item.js
deploy/: compose.base.yaml  (+4 more)
(+83 files in other folders)
