[project]
name = "acceptance"
version = "0.1.0"
description = "Bill of Exchange Management for ERPNext"
authors = [{ name = "台州京泰", email = "it@tzjingtai.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "acceptance"
