[project]
name = "item_drawings"
version = "0.0.1"
description = "物料图纸：Item 多图纸子表 + 全局 eye-icon lightbox 预览"
authors = [{ name = "台州京泰", email = "it@tzjingtai.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "item_drawings"
