[project]
name = "tzjingtai"
version = "0.1.0"
description = "台州京泰自定义逻辑 (link formatters / 业务微调)"
authors = [{ name = "台州京泰", email = "it@tzjingtai.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "tzjingtai"
